--- a/style.css
+++ b/style.css
@@ -1,7 +1,64 @@
+body {
+  margin: 0;
+  padding: 0;
+}
+
+header {
+  width: 100%;
+}
+
+nav {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: calc(100% - 1.5rem);
+  margin: 0.5rem auto;
+  padding: 0.3rem;
+  border: 1px solid #777;
+}
+
+nav .logo {
+  text-transform: capitalize;
+  font-weight: 700;
+  font-size: 1.5rem;
+}
+
+nav .links {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  margin-left: 0;
+  padding-left: 0;
+  list-style: none;
+  margin-right: 1rem;
+  gap: 0;
+}
+
+.links a {
+  border-left: 2px solid #444;
+  text-transform: capitalize;
+  color: #222;
+  font-weight: 500;
+  padding: 0.25rem 1rem;
+  text-decoration: none;
+}
+
+.links a.active,
+.links a:hover,
+.links a:active {
+  color: #244cfc;
+}
+
+.links li:first-child a {
+  border-left: none;
+}
+
+
 main {
   width: 100%;
   max-width: 768px;
   margin: 6rem auto;
+  min-height: 65vh;
 }
 
 form {
@@ -16,6 +73,7 @@ form {
 h1,
 h2 {
   text-align: center;
+  text-transform: capitalize;
 }
 
 .book {
@@ -41,5 +99,39 @@ h2 {
 }
 
 .remove {
+  cursor: pointer;
+  box-shadow: 0.15rem 0.1rem 0.1rem 0.1rem rgba(0,0,0,0.7);
+  transition: all 0.15s ease-in;
   margin-left: auto;
+}
+
+.remove:hover {
+  transform: translateY(-1px);
+}
+
+#contact {
+  text-align: center;
+}
+
+#contact ul {
+  padding-left: 0;
+  margin-left: 0;
+  width: 100%;
+  max-width: 320px;
+  margin: auto;
+  text-align: left;
+}
+
+h3 {
+  text-transform: capitalize;
+  margin: 0.25rem;
+}
+
+footer { margin-top: auto; }
+
+footer nav {
+  width: calc(100% - 1.5rem);
+  margin: auto;
+  padding: 0.3rem;
+  border: 1px solid #777;
 }
